--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="front">
           <section class="business-card-name">
             <h1>Alin Inayeh</h1>
-            <h2>Frontend developer with over 10 years of experience. Big fan of JavaScript.</h2>
+            <h2>Frontend developer with over 10 years of experience.</h2>
           </section>
           <section class="business-card-info">
             <nav>
