--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Alin Inayeh - Experienced frontend web developer from Romania</title>
+    <title>Alin Inayeh - Senior Frontend Web Developer from Romania</title>
     <link rel="shortcut icon" type="image/png" href="http://www.alin-inayeh.ro/alin-inayeh-logo.png" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -251,7 +251,7 @@
         <div class="front">
           <section class="business-card-name">
             <h1>Alin Inayeh</h1>
-            <h2>Frontend developer with over 10 years of experience.</h2>
+            <h2>Senior Frontend Web Developer</h2>
           </section>
           <section class="business-card-info">
             <nav>
